hphp/hack/test/enum_class_label/typing/enum_class_missing_attribute.php.exp
File "enum_class_missing_attribute.php", line 15, characters 5-6:
Not enough type information to infer the type of this enum class label. (Typing[4396])
